import org.javaturk.oopj.ch04.sealing.shape.Circle;

//package org.javaturk.oopj.ch04.sealing.shape;
//
//public class AnotherCircle extends Circle {
//
//    public AnotherCircle(){
//        super("Another Circle");
//    }
//
//	@Override
//	public void draw() {
//
//	}
//}

